# SDL_Game_2D

./: .gitignore  CMakeLists.txt  README.md
SDL_Game_2D/: CMakeLists.txt  SDL_Game_2D.cpp  SDL_Game_2D.h  SDL_Game_2D.hpp  animation.hpp  gameObject.hpp  timer.hpp
